01/08/2011 Changes

Added bootstrapped class for String. Need to add rest of hierarchy for bootstrapped
classes.
Used Pharo naming of MetaClass. Was Metaclass.
Added start of Smalltak Runtime source.


31/07/2011 Changes

Added primitive for creating a subclass and used this primitive from builder class
which is generated and executed for each .st file. This special subclass extends
ProtoObject but is never registered.


30/07/2011 Changes

Modified package registry to use stack. You have a default package name for all
classes defined in a file. You can override but don't - people wont be expecting
it. 
Modified proprocessor grammer to support short hand import statements. These expand to longer hand
messages.

29/07/2011 Changes

Added creation and registration of subclasses using new/simpler approach.
Working on namespace support.
Adding special thread local registry to handle registering a package against the 
objects created in a .st file.


28/07/2011 Changes

Added method dispatch and with simplified bootstrapped hierarchy.
Moved class and instance data object out of ProtoObject - reduce lines in file.
Added bootstrap methods to get runtime working.


27/07/2011 Changes

Added boostrapper and initial bootstrap class Symbol.
Added creation of Symbol with primitive java value.


26/07/2011 Changes

Added simpler handling of common bytecodes.
Added primitive for creating Symbols.


25/07/2011 Changes

Restructured the implementation hierarchy, not Java object st.redline.ProtoObject
is base of all things.
ClassBytecodeWriter made simpler.
Fixed bug with resolving a class - if the loading of a class doesn't register itself
in the class hierarchy then all hell breaks loose (NullPointerException).


23/07/2011 Changes

Adding base support in Object to be an object. Working towards class parts.


22/07/2011 Changes

Modified <init> method to call applyTo() on itself (instance of java dynamic class) so 